--- a/index.html
+++ b/index.html
@@ -10,7 +10,30 @@
 </head>
 <body>
     <div class="grid-container">
-        <div class="news-item">
+<div class="grid-elem">1</div>
+<div class="grid-elem">2</div>
+<div class="grid-elem">3</div>
+<div class="grid-elem">4</div>
+<div class="grid-elem">5</div>
+<div class="grid-elem">6</div>
+<div class="grid-elem">7</div>
+<div class="grid-elem">8</div>
+<div class="grid-elem">9</div>
+<div class="grid-elem">10</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+        <!--<div class="news-item">
             <img src="img/cherries.jpg" alt="img" class="news-item__img">
             <div class="news-item__descr">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</div>
         </div>
@@ -37,7 +60,7 @@
         <div class="news-item">
             <img src="img/arabian-horse.jpg" alt="img" class="news-item__img">
             <div class="news-item__descr">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</div>
-        </div>
+        </div>-->
     </div>
 </body>
 </html>
