--- a/index.html
+++ b/index.html
@@ -1,26 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.min.css">
     <title>GridLesson</title>
 </head>
+
 <body>
 
     <div class="grid-container">
-<div class="grid-elem">1</div>
-<div class="grid-elem">2</div>
-<div class="grid-elem">3</div>
-<div class="grid-elem">4</div>
-<div class="grid-elem">5</div>
-<div class="grid-elem">6</div>
-<div class="grid-elem">7</div>
-<div class="grid-elem">8</div>
-<div class="grid-elem">9</div>
-<div class="grid-elem">10</div>
+
+        <div class="news-item">
+            <img src="img/switzerland.jpg" alt="switzerland" class="news-item__img">
+            <div class="news-item__descr">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</div>
+        </div>
+        <div class="news-item">
+            <img src="img/switzerland.jpg" alt="switzerland" class="news-item__img">
+            <div class="news-item__descr">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</div>
+        </div>
+        <div class="news-item">
+            <img src="img/switzerland.jpg" alt="switzerland" class="news-item__img">
+            <div class="news-item__descr">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</div>
+        </div>
+        <div class="news-item">
+            <img src="img/switzerland.jpg" alt="switzerland" class="news-item__img">
+            <div class="news-item__descr">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</div>
+        </div>
+        <div class="news-item">
+            <img src="img/switzerland.jpg" alt="switzerland" class="news-item__img">
+            <div class="news-item__descr">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</div>
+        </div>
+        <div class="news-item">
+            <img src="img/switzerland.jpg" alt="switzerland" class="news-item__img">
+            <div class="news-item__descr">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</div>
+        </div>
+        <div class="news-item">
+            <img src="img/switzerland.jpg" alt="switzerland" class="news-item__img">
+            <div class="news-item__descr">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</div>
+        </div>
+
+
+    </div>
 
 
 
@@ -30,11 +62,7 @@
 
 
 
-
-
-
-
-        <!--<div class="news-item">
+    <!--<div class="news-item">
             <img src="img/cherries.jpg" alt="img" class="news-item__img">
             <div class="news-item__descr">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</div>
         </div>
@@ -62,6 +90,7 @@
             <img src="img/arabian-horse.jpg" alt="img" class="news-item__img">
             <div class="news-item__descr">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</div>
         </div>-->
-    </div>
+
 </body>
+
 </html>
