--- a/index.html
+++ b/index.html
@@ -15,51 +15,22 @@
 
     <div class="grid-container">
 
-        <div class="news-item">
-            <img src="img/switzerland.jpg" alt="switzerland" class="news-item__img">
-            <div class="news-item__descr">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</div>
-        </div>
-        <div class="news-item">
-            <img src="img/switzerland.jpg" alt="switzerland" class="news-item__img">
-            <div class="news-item__descr">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</div>
-        </div>
-        <div class="news-item">
-            <img src="img/switzerland.jpg" alt="switzerland" class="news-item__img">
-            <div class="news-item__descr">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</div>
-        </div>
-        <div class="news-item">
-            <img src="img/switzerland.jpg" alt="switzerland" class="news-item__img">
-            <div class="news-item__descr">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</div>
-        </div>
-        <div class="news-item">
-            <img src="img/switzerland.jpg" alt="switzerland" class="news-item__img">
-            <div class="news-item__descr">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</div>
-        </div>
-        <div class="news-item">
-            <img src="img/switzerland.jpg" alt="switzerland" class="news-item__img">
-            <div class="news-item__descr">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</div>
-        </div>
-        <div class="news-item">
-            <img src="img/switzerland.jpg" alt="switzerland" class="news-item__img">
-            <div class="news-item__descr">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</div>
-        </div>
+        <div class="grid-elem">Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi amet, libero nostrum hic vero earum optio beatae quibusdam ducimus aliquam officiis repudiandae porro sapiente voluptatibus soluta dolore eligendi distinctio itaque?</div>
+        <div class="grid-elem">2</div>
+        <div class="grid-elem">3</div>
+        <div class="grid-elem">4</div>
+        <div class="grid-elem">5</div>
+        <div class="grid-elem">6</div>
+        <div class="grid-elem">7</div>
+        <div class="grid-elem">8</div>
+        <div class="grid-elem">9</div>
+        <div class="grid-elem">10</div>
+
+
+
 
 
     </div>
-
-
-
-
-
-
-
 
 
     <!--<div class="news-item">
