--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
 
     <div class="grid-container">
 
-        <div class="grid-elem">Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi amet, libero nostrum hic vero earum optio beatae quibusdam ducimus aliquam officiis repudiandae porro sapiente voluptatibus soluta dolore eligendi distinctio itaque?</div>
-        <div class="grid-elem">2</div>
-        <div class="grid-elem">3</div>
-        <div class="grid-elem">4</div>
+        <div id="first" class="grid-elem">1</div>
+        <div id="second" class="grid-elem">2</div>
+        <div id="third" class="grid-elem">3</div>
+        <!--<div class="grid-elem">4</div>
         <div class="grid-elem">5</div>
         <div class="grid-elem">6</div>
         <div class="grid-elem">7</div>
         <div class="grid-elem">8</div>
         <div class="grid-elem">9</div>
-        <div class="grid-elem">10</div>
+        <div class="grid-elem">10</div>-->
 
 
 
