--- a/index.html
+++ b/index.html
@@ -14,53 +14,19 @@
 <body>
 
     <div class="grid-container">
-
-        <div id="first" class="grid-elem">1</div>
-        <div id="second" class="grid-elem">2</div>
-        <div id="third" class="grid-elem">3</div>
-        <div class="grid-elem">4</div>
-        <div class="grid-elem">5</div>
-        <div class="grid-elem">6</div>
-        <div class="grid-elem">7</div>
-        <div class="grid-elem">8</div>
-        <div class="grid-elem">9</div>
-        <div class="grid-elem">10</div>
-
+        <div id="header" class="grid-elem">1</div>
+        <div id="blog" class="grid-elem">2</div>
+        <div id="message" class="grid-elem">3</div>
+        <div id="footer" class="grid-elem">
+            <div class="grid-elem orange"></div>
+            <div class="grid-elem orange"></div>
+            <div class="grid-elem orange"></div>
+        </div>
 
 
 
 
     </div>
-
-
-    <!--<div class="news-item">
-            <img src="img/cherries.jpg" alt="img" class="news-item__img">
-            <div class="news-item__descr">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</div>
-        </div>
-        <div class="news-item">
-            <img src="img/kyrgyzstan.jpg" alt="img" class="news-item__img">
-            <div class="news-item__descr">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</div>
-        </div>
-        <div class="news-item">
-            <img src="img/cat.jpg" alt="img" class="news-item__img">
-            <div class="news-item__descr">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</div>
-        </div>
-        <div class="news-item">
-            <img src="img/fog.jpg" alt="img" class="news-item__img">
-            <div class="news-item__descr">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</div>
-        </div>
-        <div class="news-item">
-            <img src="img/switzerland.jpg" alt="img" class="news-item__img">
-            <div class="news-item__descr">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</div>
-        </div>
-        <div class="news-item">
-            <img src="img/mushroom.jpg" alt="img" class="news-item__img">
-            <div class="news-item__descr">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</div>
-        </div>
-        <div class="news-item">
-            <img src="img/arabian-horse.jpg" alt="img" class="news-item__img">
-            <div class="news-item__descr">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</div>
-        </div>-->
 
 </body>
 
